--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -41,9 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Account.cs" />
+    <Compile Include="BangPhu.cs" />
+    <Compile Include="CaChieu.cs" />
+    <Compile Include="Cage.cs" />
+    <Compile Include="Customer.cs" />
+    <Compile Include="LichChieu.cs" />
+    <Compile Include="Phim.cs" />
+    <Compile Include="Phongchieu.cs" />
     <Compile Include="Staff.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ticket.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
