--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -42,9 +42,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Customer_DAL.cs" />
+    <Compile Include="LichChieu_DAL.cs" />
     <Compile Include="Staff_DAL.cs" />
     <Compile Include="DataProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ticker_DAL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DTO\DTO.csproj">
