--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -43,11 +43,12 @@
   <ItemGroup>
     <Compile Include="Dangnhap_BLL.cs" />
     <Compile Include="Datve_BLL.cs" />
-    <Compile Include="Khachhang_BLL.cs" />
+    <Compile Include="KhachHang_BLL.cs" />
     <Compile Include="CaChieu_BLL.cs" />
     <Compile Include="Nhanvien_BLL.cs" />
     <Compile Include="Phim_BLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TaiKhoan_BLL.cs" />
     <Compile Include="TheLoai_BLL.cs" />
   </ItemGroup>
   <ItemGroup>
