--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -49,6 +49,7 @@
     <Compile Include="DataProvider.cs" />
     <Compile Include="Phim_DAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TaiKhoan_DAL.cs" />
     <Compile Include="TheLoai_DAL.cs" />
     <Compile Include="Ticker_DAL.cs" />
   </ItemGroup>
