--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -47,6 +47,7 @@
     <Compile Include="CaChieu_BLL.cs" />
     <Compile Include="Nhanvien_BLL.cs" />
     <Compile Include="Phim_BLL.cs" />
+    <Compile Include="PhongChieu_BLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaiKhoan_BLL.cs" />
     <Compile Include="TheLoai_BLL.cs" />
