--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -48,6 +48,7 @@
     <Compile Include="NhanVien_DAL.cs" />
     <Compile Include="DataProvider.cs" />
     <Compile Include="Phim_DAL.cs" />
+    <Compile Include="PhongChieu_DAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaiKhoan_DAL.cs" />
     <Compile Include="TheLoai_DAL.cs" />
