--- a/MAIN/GUI.csproj
+++ b/MAIN/GUI.csproj
@@ -162,6 +162,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ve.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ve.Designer.cs">
+      <DependentUpon>Ve.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="BanVe.resx">
       <DependentUpon>BanVe.cs</DependentUpon>
     </EmbeddedResource>
@@ -206,6 +212,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ve.resx">
+      <DependentUpon>Ve.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
