--- a/MAIN/GUI.csproj
+++ b/MAIN/GUI.csproj
@@ -88,6 +88,12 @@
     <Compile Include="BanVe.Designer.cs">
       <DependentUpon>BanVe.cs</DependentUpon>
     </Compile>
+    <Compile Include="ChonKH.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ChonKH.Designer.cs">
+      <DependentUpon>ChonKH.cs</DependentUpon>
+    </Compile>
     <Compile Include="KhachHang.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -170,6 +176,9 @@
     </Compile>
     <EmbeddedResource Include="BanVe.resx">
       <DependentUpon>BanVe.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ChonKH.resx">
+      <DependentUpon>ChonKH.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DangNhap.resx">
       <DependentUpon>DangNhap.cs</DependentUpon>
