--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HoaDon_DAL.cs" />
     <Compile Include="KhachHang_DAL.cs" />
     <Compile Include="DangNhap_DAL.cs" />
     <Compile Include="Datve_DAL.cs" />
