--- a/MAIN/GUI.csproj
+++ b/MAIN/GUI.csproj
@@ -94,11 +94,23 @@
     <Compile Include="ChonKH.Designer.cs">
       <DependentUpon>ChonKH.cs</DependentUpon>
     </Compile>
+    <Compile Include="HoaDon.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HoaDon.Designer.cs">
+      <DependentUpon>HoaDon.cs</DependentUpon>
+    </Compile>
     <Compile Include="KhachHang.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="KhachHang.Designer.cs">
       <DependentUpon>KhachHang.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NhapDiem.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NhapDiem.Designer.cs">
+      <DependentUpon>NhapDiem.cs</DependentUpon>
     </Compile>
     <Compile Include="Taikhoan.cs">
       <SubType>Form</SubType>
@@ -185,6 +197,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="KhachHang.resx">
       <DependentUpon>KhachHang.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NhapDiem.resx">
+      <DependentUpon>NhapDiem.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Taikhoan.resx">
       <DependentUpon>Taikhoan.cs</DependentUpon>
