--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaiKhoan_DAL.cs" />
     <Compile Include="TheLoai_DAL.cs" />
+    <Compile Include="Ve_DAL.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
