--- a/MAIN/GUI.csproj
+++ b/MAIN/GUI.csproj
@@ -67,6 +67,9 @@
     <Reference Include="Bunifu.UI.WinForms.BunifuTextbox">
       <HintPath>..\..\..\..\..\Downloads\Bunifu\Bunifu.UI.WinForms.BunifuTextbox.dll</HintPath>
     </Reference>
+    <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.ReportSource, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Shared, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
@@ -94,6 +97,12 @@
     <Compile Include="ChonKH.Designer.cs">
       <DependentUpon>ChonKH.cs</DependentUpon>
     </Compile>
+    <Compile Include="CTHoaDon.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CTHoaDon.Designer.cs">
+      <DependentUpon>CTHoaDon.cs</DependentUpon>
+    </Compile>
     <Compile Include="HoaDon.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -111,6 +120,12 @@
     </Compile>
     <Compile Include="NhapDiem.Designer.cs">
       <DependentUpon>NhapDiem.cs</DependentUpon>
+    </Compile>
+    <Compile Include="rptHoaDon.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>rptHoaDon.rpt</DependentUpon>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="Taikhoan.cs">
       <SubType>Form</SubType>
@@ -195,6 +210,9 @@
     <EmbeddedResource Include="DangNhap.resx">
       <DependentUpon>DangNhap.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="CTHoaDon.resx">
+      <DependentUpon>CTHoaDon.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="HoaDon.resx">
       <DependentUpon>HoaDon.cs</DependentUpon>
     </EmbeddedResource>
@@ -203,6 +221,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="NhapDiem.resx">
       <DependentUpon>NhapDiem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="rptHoaDon.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>rptHoaDon.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Taikhoan.resx">
       <DependentUpon>Taikhoan.cs</DependentUpon>
@@ -314,6 +336,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DAL\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
