--- a/MAIN/GUI.csproj
+++ b/MAIN/GUI.csproj
@@ -70,10 +70,13 @@
     <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="CrystalDecisions.ReportSource, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="CrystalDecisions.Shared, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Windows.Forms, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing.Design" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -102,6 +105,12 @@
     </Compile>
     <Compile Include="CTHoaDon.Designer.cs">
       <DependentUpon>CTHoaDon.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI_Report.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI_Report.Designer.cs">
+      <DependentUpon>GUI_Report.cs</DependentUpon>
     </Compile>
     <Compile Include="HoaDon.cs">
       <SubType>Form</SubType>
@@ -220,6 +229,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CTHoaDon.resx">
       <DependentUpon>CTHoaDon.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI_Report.resx">
+      <DependentUpon>GUI_Report.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HoaDon.resx">
       <DependentUpon>HoaDon.cs</DependentUpon>
