--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaiKhoan_BLL.cs" />
     <Compile Include="TheLoai_BLL.cs" />
+    <Compile Include="ThongKe_BLL.cs" />
     <Compile Include="Ve_BLL.cs" />
   </ItemGroup>
   <ItemGroup>
